2007-03-30  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/notebook/examplewindow.cc:
	* examples/book/notebook/examplewindow.h: Connect to the switch-page signal, 
	as a demonstration.

2007-03-12  Andrew E. Makeev  <andrew@solvo.ru>

	* gtk/src/treeview.ccg: fix memory leak in get_cursor() function.
	Bug #417539

2007-03-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* gtk/src/gtk_docs_override.xml: fix documentation of
	IconTheme::get_example_icon_name() so that it doesn't imply that the
	returned ustring needs to be freed.

2.10.8:

2007-03-03  Alan Ott  <alan@signal11.us>

	* docs/tutorial/gtkmm-tut.xml: Added a new appendix, about using 
	Visual Studio 2005.
	* docs/tutorial/figures/Makefile.am: Mention new screenshots, for the 
	new appendix.
	Bug #409102

2007-02-15  Murray Cumming,  <murrayc@murrayc.com>

	* gdk/src/dragcontext.ccg: Use GDK_POINTER_TO_ATOM() instead of a simple 
	cast, which is more like GTK+ public API.

2007-02-11  Marko Anastasov  <marko@marko.anastasov.name>

	* docs/tutorial/gtkmm-tut.xml: Updated chapter on internationalization.
	Explains how to set up an autotools-based project, the use of intltool,
	basic instructions how to add a translation and a resources list.

2007-01-28  Daniel Elstner  <daniel.kitta@gmail.com>

	* gtk/src/actiongroup.ccg (ActionGroup::add): Don't use NULL but
	static_cast<char*>(0) to terminate the g_object_get() varargs list,
	to prevent serious breakage on 64-bit systems without GCC magic.
	Please, everyone, do me a favor and don't use NULL in C++ code,
	especially not in conjunction with varargs.  Thanks.

2.10.7:

2007-01-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/main.ccg: Destructor: Call the cleanup functions, instead of calling 
	init again. This seems to be a copy/paste error from April 2003. 
	Bug #383340 from Christopher Raine.

2007-01-20  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Add a Google search, restricted to the gtkmm documentation.
