@@ -3,7 +3,6 @@
   "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY wwwgtk "http://www.gtk.org">
   <!ENTITY wwwgtkmm	"http://www.gtkmm.org">
-  <!ENTITY wwwlibglademm "http://sourceforge.net/projects/libglademm/">
   <!ENTITY wwwglademm "http://home.wtal.de/petig/">
   <!ENTITY wwwbakery "http://bakery.sourceforge.net/">
 ]>
@@ -380,9 +379,17 @@ reference documentation of these methods.
 <question><para>How can I use Glade and/or libglade with gtkmm?</para></question>
 <answer>
 <orderedlist>
-<listitem><para>Glade can output C++ code instead of C code, when using <ulink url="&wwwglademm;">Glade--</ulink></para></listitem>
-<listitem><para>libglademm, which is part of gnomemm, wraps
-libglade. This allows you to load widget arrangements at runtime.</para></listitem>
+<listitem><para>Use libglademm, which is part of gnomemm and wraps libglade.
+It allows you to load widget information from the XML user interface
+description files that Glade generates at runtime. This method is strongly
+recommended. Experience has shown that it works well for large projects, and
+there is a lot of example code out there you can look at. For an introduction,
+see the corresponding chapter in the gtkmm tutorial.</para></listitem>
+
+<listitem><para>Alternatively, Glade 2 can output C++ code instead of C code,
+when using <ulink url="&wwwglademm;">Glade--</ulink>, which is not part of gnomemm.
+Note that code generation is a deprecated feature in Glade 3. For questions
+regarding Glade--, please use its own mailing list.</para></listitem>
 </orderedlist>
 </answer>
 </qandaentry>
