@@ -1,3 +1,9 @@
+2007-04-14  Marko Anastasov <marko@marko.anastasov.name>
+
+	* docs/FAQ/gtkmm-faq.xml: Emphasised that the use libglademm is
+	preferred over glademm. Bug #429043.
+	Removed the old libglademm URL entity.
+
 2007-03-30  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/notebook/examplewindow.cc:
